Fix static image paths and filenames

--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -198,12 +198,12 @@
 
       <!-- company logos below -->
 
-      <img src="{% static 'images/MFA logo.jpg' %}" alt="Ministry of Foreign and Diaspora Affairs" class="company-logo" />
-      <img src="{% static 'images/UNDP.jpg' %}" alt="UNDP Logo" class="company-logo" />
-      <img src="{% static 'images/Gayo logo.jpg' %}" alt="Gayo Logo" class="company-logo" />
-      <img src="{% static 'images/TW logo.jpg' %}" alt="Their world Logo" class="company-logo" />
-      <img src="{% static 'images/AIP logo.jpg' %}" alt="Association For Intersex People Logo" class="company-logo" />
-      <img src="{% static 'images/GPA logo.jpg' %}" alt="Green Peace Africa Logo" class="company-logo" />
+      <img src="{% static 'images/mfa.jpg' %}" alt="Ministry of Foreign and Diaspora Affairs" class="company-logo" />
+      <img src="{% static 'images/undp.jpg' %}" alt="UNDP Logo" class="company-logo" />
+      <img src="{% static 'images/gayo.jpg' %}" alt="Gayo Logo" class="company-logo" />
+      <img src="{% static 'images/tw.jpg' %}" alt="Their world Logo" class="company-logo" />
+      <img src="{% static 'images/aip.jpg' %}" alt="Association For Intersex People Logo" class="company-logo" />
+      <img src="{% static 'images/gpa.jpg' %}" alt="Green Peace Africa Logo" class="company-logo" />
       <img src="{% static 'images/Agnes.jpg' %}" alt="Agnes Logo" class="company-logo" />
     </div>
     </div>
@@ -226,7 +226,7 @@
          <a href="https://bsky.app/profile/janenjugunah.bsky.social" target="_blank"><i class="fa-solid fa-cloud"></i></a>
           </div>
         </div>
-        
+
       <div class="footer-credit">
         <p class="footer-credit">Designed by <a href="https://www.linkedin.com/in/mary-njuguna-101145371/">Mary Njuguna</a></p>
       </div>
