--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -30,6 +30,7 @@
             </button>
 
             <ul class="nav-links">
+              <li><a href="{% url 'index' %}#index">Home</a></li>
               <li><a href="{% url 'index' %}#about">About</a></li>
               <li><a href="{% url 'index' %}#education">Education</a></li>
               <li><a href="{% url 'index' %}#companies">Partners</a></li>
@@ -150,7 +151,7 @@
 
       <div class="about-card" tabindex="0">
         <div class="card-thumbnail">
-          <img src="{% static 'images/partnership.jpg' %}" alt="Innovation & Youth" />
+          <img src="{% static 'images/innovation.jpg' %}" alt="Innovation & Youth" />
         </div>
         <div class="card-header">
           <h3 class="card-title">Innovation & Youth</h3>
