--- a/portfolio/static/styles.css
+++ b/portfolio/static/styles.css
@@ -296,6 +296,12 @@ h1, h2 {
 
 /* ---- contact-form ---- */
 
+.success, .error {
+  margin-top: 20px;
+  text-align: center;
+  font-weight: bold
+}
+
 .contact-text {
   text-align: center;
   margin-bottom: 60px;
