Add home link to mobile view

--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -43,6 +43,7 @@
 
     <div class="mobile-menu" id="mobile-menu">
       <ul class="mobile-links">
+        <li><a href="{% url 'index' %}#index">Home</a></li>
          <li><a href="{% url 'index' %}#about">About</a></li>
          <li><a href="{% url 'index' %}#education">Education</a></li>
          <li><a href="{% url 'index' %}#companies">Partners</a></li>
